--- a/config/pom.xml
+++ b/config/pom.xml
@@ -6,16 +6,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.github.alexandreroman.hellocloudfoundry</groupId>
+        <groupId>fr.alexandreroman.demos.hellocloudfoundry</groupId>
         <artifactId>parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>config</artifactId>
-
-    <properties>
-        <kotlin.version>1.2.61</kotlin.version>
-    </properties>
 
     <dependencies>
         <dependency>
