--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,14 @@
         <version>2.0.6.RELEASE</version>
     </parent>
 
-    <groupId>com.github.alexandreroman.hellocloudfoundry</groupId>
+    <groupId>fr.alexandreroman.demos.hellocloudfoundry</groupId>
     <artifactId>parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
         <java.version>1.8</java.version>
-        <kotlin.version>1.2.70</kotlin.version>
+        <kotlin.version>1.2.71</kotlin.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
     </properties>
 
@@ -47,7 +47,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-config</artifactId>
-                <version>2.0.1.RELEASE</version>
+                <version>2.0.2.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -55,8 +55,6 @@
     </dependencyManagement>
 
     <build>
-        <finalName>${project.groupId}-${project.artifactId}</finalName>
-
         <plugins>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
