--- a/manifest.yml
+++ b/manifest.yml
@@ -4,3 +4,5 @@ applications:
   memory: 1G
   random-route: true
   path: app/target/hellocloudfoundry.jar
+  buildpacks:
+  - https://github.com/cloudfoundry/java-buildpack.git
